--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
                 <i class='bx bxs-home activeIcon' ></i>
             </a>
             <li>
-                <a href="#">
+                <a href="https://github.com/devmarcelomacedo">
                     <i class='bx bx-user'></i>
                     <i class='bx bxs-user activeIcon'></i>
                 </a>
@@ -28,13 +28,13 @@
                 </a>
             </li>
             <li>
-                <a href="#">
-                    <i class='bx bx-folder' ></i>
-                    <i class='bx bxs-folder-open activeIcon'></i>
+                <a href="https://www.facebook.com/universalcamposdosgoytacazes" target="_blank">
+                    <i class='bx bxl-facebook-circle'></i>
+                    <i class='bx bxl-facebook-square activeIcon'></i>
                 </a>
             </li>
             <li>
-                <a href="https://www.instagram.com/evgcamposdosgoytacazes/">
+                <a href="https://www.instagram.com/evgcamposdosgoytacazes/" target="_blank">
                     <i class='bx bxl-instagram'></i>
                     <i class='bx bxl-instagram-alt activeIcon' ></i>
                 </a>
