--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
                 <i class='bx bxs-home activeIcon' ></i>
             </a>
             <li>
-                <a href="https://github.com/devmarcelomacedo">
+                <a href="https://github.com/devmarcelomacedo" target="_blank">
                     <i class='bx bx-user'></i>
                     <i class='bx bxs-user activeIcon'></i>
                 </a>
